--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     position: absolute;
     top: 20%;
     width: 70%;
-    height: 50%;
+    height: 60%;
     border-radius: 10px;
     margin: 0 auto;
     position: relative;
@@ -54,8 +54,10 @@ body {
     margin-top: 10px;
 }
 
-input {
+input,
+button {
     margin-left: 10%;
+    margin-top: 5px;
 }
 
 iframe {
